src/tests/cases/snapshots/ui__delete_folder_with_multiple_children-5.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[4]"
---
                                                                                                                                                                                              
                                                                      32 8               /tmp/bandwhich_test /del t _folder_with_multiple_children (32.8K)             Space fr ed: 12.3K     
                                                                                                                                                                                              
                                                                                                                                         ─                                                    
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file1                                                                                             
                                                                                                                                                                                              
                                                                                         16.4K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file2                                                                                             
                                                                                                                                                                                              
                                                                                         16.4K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                         ─                                                    
                                                                                                                                                                                              
                                                                                                                                                                                              

