src/tests/cases/snapshots/ui__delete_folder_with_multiple_children.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
                                                                                                                                                                                              
                                             /tmp/bandwhich_tests/delete_folder_with_multiple_children | 45.1K | +7 files                                                  Space freed: 0     
                                                                                                                                                                                              
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬───────────────────────────────────────────────────┐
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                 file1                                                                  │                                                   │
│                                                                                                                                        │                                                   │
│                                                              16.4K (36%)                                                               │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │           subfolder1/ (+4 descendants)            │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                   │
│                                                                                                                                        │                    12.3K (27%)                    │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                 file2                                                                  │                                                   │
│                                                                                                                                        │                                                   │
│                                                              16.4K (36%)                                                               │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
│                                                                                                                                        │                                                   │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────────────────┘
 x = Small files                                                                                                                                                                              
 <hjkl> or <arrow keys> - move around, <ENTER> - enter folder, <ESC> - parent folder, <Ctrl-D> - delete                                                                                       

